# Video-Edit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/videoEdit/: __init__.py  main.py  ui.py  video_processor.py
src/videoEdit/controllers/: __init__.py  export.py  playback.py  range_controller.py
src/videoEdit/handlers/: __init__.py  drag_drop.py  file_handler.py
src/videoEdit/processors/: __init__.py  video_processor.py
